[tool.poetry]
name = "un-semun"
version = "0.1.0"
description = ""
authors = ["Clément Sicard <csicard@ethz.ch>"]
readme = "README.md"
packages = [{include = "un_semun"}]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
